[project]
name = "dloomberg-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.0",
    "blpapi>=3.26.4.2",
    "fastapi>=0.136.3",
    "ipykernel>=7.3.0",
    "matplotlib>=3.10.9",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
    "xlwings>=0.36.2",
    "yfinance>=1.4.1",
]

[[tool.uv.index]]
url = "https://blpapi.bloomberg.com/repository/releases/python/simple/"
